<resources>
    <string name="app_name">CureInstant</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="notif">Notifications</string>
    <string name="feed">Feed</string>
    <string name="trending">Trending</string>
    <string name="nav_title_read">Read</string>
    <string name="nav_title_appointments">Appointments</string>
    <string name="nav_title_records">Records</string>
    <string name="nav_title_more">More</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Invalid password</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="error_incorrect_username_password">Incorrect Username or Password</string>
    <string name="error_invalid_password_not_a_match">Password not a match</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_next">Next</string>
    <string name="add_record">Add Record</string>
    <string name="post_title">I am Suffering form skin rashes problem.What Should I do?</string>
    <string name="post_type">Answer</string>
    <string name="post_time">1 hr ago</string>
    <string name="doctor_name">Rameshwar Kumar</string>
    <string name="doctor_speciality">Orthopedic Surgeon</string>
    <string name="post_desc">Sun rash and sun allergy are terms often used to describe a number of conditions in which an itchy red rash occurs on skin that\'s been exposed to sunlight. The most common form of sun rash is polymorphic light eruption, also known as sun poisoning. Some people have a hereditary type of sun allergy, while others develop signs and symptoms only when triggered by another factor — such as certain types of medications or skin exposure to certain plants, such as limes or wild parsnip. Mild cases of sun rash may resolve without treatment. More-severe cases may require steroid creams or pills. People who have a severe sun allergy may need to take preventative measures, such as: Limit exposure. Avoid spending time in the sun, especially when the sun\'s rays are most intense — between 10 a.m. and 4 p.m. Use sunscreen. Use a high-SPF sunscreen that specifically blocks both ultraviolet A and ultraviolet B rays. Apply sunscreen generously, and reapply every two hours — or more often if you\'re swimming or perspiring. Cover up. Wear a broad-brimmed hat and cover your arms and legs with clothing that\'s tightly woven or specifically designed to protect from the sun.</string>
    <string name="write_your_question_here">Write your question here</string>
    <string name="enter_more_details_here">Enter more details here</string>
    <string name="question">Question</string>
    <string name="ask_question">Ask Question</string>
    <string name="feedback_dummy">Doctor Strange was a brilliant but egotistical surgeon. After a car accident destroys the nerves in his hands and hinders his ability to performsurgery, he searches the globe for a way to repair them encounters the Ancient One.</string>
    <string name="following_count">%d Following</string>
    <string name="followers_count">%d Followers</string>
    <string name="helpful_count">%d Helpful</string>
    <string name="comments_count">%d Comment</string>
    <string name="shares_count">%d Share</string>
    <string name="replies_count">%d reply</string>
    <string name="time_days_count">%d day(s) ago</string>
    <string name="time_hours_count">%d hour(s) ago</string>
    <string name="time_minutes_count">%d minute(s) ago</string>
    <string name="time_just_now">just now</string>
    <string name="male_string">MALE</string>
    <string name="female_string">FEMALE</string>
    <string name="attachments_count">%d Attachment(s)</string>
    <string name="doctor_fee">Fee: %s</string>
    <string name="file_provider_authority" translatable="false">com.cureinstant.cureinstant.fileprovider</string>
    <string name="chat_activity_title">Chat</string>
    <string name="invitation_title">Try CureInstant</string>
    <string name="invitation_message">Download this amazing app to ask any health queries or book appointment.</string>
    <string name="invitation_cta">Get it now</string>
    <string name="title_book_slots">Slots</string>
    <string name="hint_input">Input</string>
    <string name="title_helpful">Helpful</string>
    <string name="title_follow">Follow</string>
    <string name="title_comment">Comment</string>
    <string name="title_share">Share</string>
    <string name="title_book">Book</string>
    <string name="desc_user_profile_picture">User Profile picture</string>
    <string name="text_following">0 Following</string>
    <string name="text_helpful">0 Helpful</string>
    <string name="text_comments">0 Comments</string>
    <string name="text_share">0 Share</string>
    <string name="title_answer">Answer</string>
    <string name="title_comments">Comments</string>
    <string name="desc_login_banner_image">Login banner image</string>
    <string name="text_forgot_your_password">Forgot your Password?</string>
    <string name="text_close_button">Close button</string>
    <string name="text_description">Description</string>
    <string name="desc_new_question_attachments_icon">New question attachments icon</string>
    <string name="text_attachment">0 Attachment(s)</string>
    <string name="desc_user_profile_banner">User Profile banner</string>
    <string name="title_name">Name</string>
    <string name="title_dob">DOB</string>
    <string name="text_26_11_1990">26/11/1990</string>
    <string name="title_sex">Sex</string>
    <string name="title_male">Male</string>
    <string name="title_email">Email</string>
    <string name="text_mera_yahoo_com">mera@yahoo.com</string>
    <string name="desc_close_button">Close button</string>
    <string name="hint_search_doctors">Search doctors...</string>
    <string name="desc_search_button">Search button</string>
    <string name="desc_signup_banner_image">Signup banner image</string>
    <string name="desc_cureinstant_logo">CureInstant logo</string>
    <string name="title_log_in">Log In</string>
    <string name="title_sign_up">Sign Up</string>
    <string name="title_find_doctors">Find Doctors</string>
    <string name="hint_location">Location</string>
    <string name="hint_speciality">Speciality</string>
    <string name="title_search">Search</string>
    <string name="desc_my_questions_icon">My questions icon</string>
    <string name="desc_my_questions">My Questions</string>
    <string name="desc_chat_icon">Chat icon</string>
    <string name="title_chat">Chat</string>
    <string name="desc_following_icon">Following icon</string>
    <string name="title_following">Following</string>
    <string name="desc_followers_icon">Followers icon</string>
    <string name="title_followers">Followers</string>
    <string name="desc_settings_icon">Settings icon</string>
    <string name="title_settings">Settings</string>
    <string name="title_invite_others_to_use_cureinstant">Invite others to use CureInstant</string>
    <string name="title_most_answered">Most Answered</string>
    <string name="title_most_commented">Most Commented</string>
    <string name="desc_doctor_profile_picture">Doctor profile picture</string>
    <string name="title_all_india_medical">All india medical</string>
    <string name="text_fee_500">Fee: 500</string>
    <string name="title_replies">Replies</string>
    <string name="desc_tab_icon">Tab icon</string>
    <string name="desc_doctor_s_achivements_image">Doctor\'s achivements image</string>
    <string name="text_all_india_institute_of_medical_sciences_new_delhi_delhi">All India Institute of Medical Sciences, New Delhi ,Delhi</string>
    <string name="text_b_d_s_bachelor_of_dental_surgery">B.D.S. (Bachelor of Dental Surgery)</string>
    <string name="text_nov_2013_dec_2016">Nov 2013 - Dec 2016</string>
    <string name="title_location">Location</string>
    <string name="text_delhi_in">Delhi, IN</string>
    <string name="title_number">Number</string>
    <string name="text_9876543210">9876543210</string>
    <string name="text_xyz_gmail_com">xyz@gmail.com</string>
    <string name="text_followers">0 Followers</string>
    <string name="desc_doctor_s_profile_picture">Doctor\'s profile picture</string>
    <string name="title_summary">Summary</string>
    <string name="text_time_and_space_traveling_adventures_of_a_gallifreyan_time_lord_only_known_as_the_doctor_and_his_companions_traveling_through_time_and_space">Time and Space traveling adventures of a Gallifreyan Time Lord only known as the Doctor and his companions, traveling through time and space.</string>
    <string name="text_practices_at">Practices At</string>
    <string name="title_specialisation">Specialisation</string>
    <string name="title_education">Education</string>
    <string name="title_feedback">Feedback</string>
    <string name="title_publication">Publication</string>
    <string name="title_achievements">Achievements</string>
    <string name="title_dermatologist">Dermatologist</string>
    <string name="text_ramanuj_clinic">Ramanuj Clinic</string>
    <string name="text_bn_14_kaushambi_ghaziabad">BN-14, Kaushambi, Ghaziabad</string>
    <string name="title_doctors">Doctors</string>
    <string name="desc_feed_item_image">Feed item image</string>
    <string name="text_utsav_gupta">utsav Gupta</string>
    <string name="text_commented_on_this">commented on this</string>
    <string name="desc_youtube_video_thumbnail">Youtube video thumbnail</string>
    <string name="desc_youtube_play_icon">Youtube play icon</string>
    <string name="title_unfollow">Unfollow</string>
    <string name="title_post">Post</string>
    <string name="title_article">Article</string>
    <string name="title_question">Question</string>
    <string name="title_feed">Feed</string>
    <string name="title_uploading_image">Uploading Image</string>
    <string name="add_widget">Add widget</string>
    <string name="text_loading">loading...</string>
    <string name="text_no_appointments_available">No Appointments available</string>
    <string name="text_appointment_successfully_booked">Appointment successfully booked</string>
    <string name="text_something_went_wrong">Something went wrong!</string>
    <string name="text_feature_comming_soon">This feature is coming soon!</string>
    <string name="text_shared">shared</string>
    <string name="text_reply_posted">Reply posted</string>
    <string name="text_uploading_image">Please wait! Uploading Image</string>
    <string name="text_uploading_image_2">Uploading Image</string>
    <string name="text_invalid_image">Invalid Image</string>
    <string name="text_go_to_settings_and_enable_permissions">Go to settings and enable permissions</string>
    <string name="text_otp_sent">OTP sent.</string>
    <string name="text_reply_posted_2">Reply posted</string>
    <string name="text_shared_2">shared</string>
    <string name="text_no">No</string>
    <string name="text_fount_in_this_area">found in this area</string>
    <string name="text_invitation_cancelled">Invitation cancelled!</string>
    <string name="text_comment_posted_2">Comment posted</string>
    <string name="text_check_internet_connection">Check Internet connection</string>
    <string name="title_top_trending_question">Top trending question</string>
    <string name="title_ask_question">Ask question</string>
</resources>