<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/feed_post_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:background="@android:color/white"
    android:elevation="1dp"
    android:orientation="vertical"
    android:paddingBottom="8dp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="8dp">

    <RelativeLayout
        android:id="@+id/post_action_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/post_action_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/text_utsav_gupta"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/post_action_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/post_action_name"
            android:layout_toRightOf="@id/post_action_name"
            android:text="@string/text_commented_on_this"
            android:textSize="12sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_below="@id/post_action_name"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:background="@color/divider" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/post_info_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/post_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/post_type"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/post_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/post_time"
            android:textSize="12sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/post_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/post_title"
        android:textSize="18sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/doctor_info_container"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="8dp">

        <ImageView
            android:id="@+id/doctor_picture"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:contentDescription="@string/desc_doctor_profile_picture"
            android:scaleType="fitCenter"
            android:src="@drawable/doctor_placeholder" />

        <TextView
            android:id="@+id/doctor_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="4dp"
            android:layout_toEndOf="@id/doctor_picture"
            android:layout_toRightOf="@id/doctor_picture"
            android:text="@string/doctor_name"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/doctor_speciality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/doctor_name"
            android:layout_marginBottom="4dp"
            android:layout_toEndOf="@id/doctor_picture"
            android:layout_toRightOf="@id/doctor_picture"
            android:text="@string/doctor_speciality" />

    </RelativeLayout>

    <TextView
        android:id="@+id/post_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/post_desc" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <TextView
            android:id="@+id/post_follow_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/text_following"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/post_helpful_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/text_helpful"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/post_comment_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/text_comments"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/post_share_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/text_share"
            android:textSize="12sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="8dp"
        android:background="@color/divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/post_helpful_button"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:clickable="true"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:padding="8dp"
            android:text="@string/title_helpful"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/post_follow_button"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:clickable="true"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:padding="8dp"
            android:text="@string/title_follow"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/post_comment_button"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:clickable="true"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:padding="8dp"
            android:text="@string/title_comment"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/post_share_button"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:clickable="true"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:padding="8dp"
            android:text="@string/title_share"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>

</LinearLayout>