<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cureinstant.cureinstant.activity.ProfileActivity">

    <include layout="@layout/layout_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/user_bg"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_alignParentTop="true"
                android:adjustViewBounds="true"
                android:contentDescription="@string/desc_user_profile_banner"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/cureinstant_bg" />

            <ImageView
                android:id="@+id/user_picture"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_below="@id/user_bg"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginTop="-50dp"
                android:contentDescription="@string/desc_user_profile_picture"
                android:src="@drawable/doctor_placeholder" />

            <TextView
                android:id="@+id/user_name_title"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_picture"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:text="@string/title_name"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/user_name"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_picture"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_toEndOf="@id/user_name_title"
                android:layout_toRightOf="@id/user_name_title"
                android:text="@string/doctor_name" />

            <TextView
                android:id="@+id/user_dob_title"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_name_title"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:text="@string/title_dob"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/user_dob"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_name_title"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_toEndOf="@id/user_dob_title"
                android:layout_toRightOf="@id/user_dob_title"
                android:text="@string/text_26_11_1990" />

            <TextView
                android:id="@+id/user_sex_title"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_dob_title"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:text="@string/title_sex"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/user_sex"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_dob_title"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_toEndOf="@id/user_sex_title"
                android:layout_toRightOf="@id/user_sex_title"
                android:text="@string/title_male" />

            <TextView
                android:id="@+id/user_email_title"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_sex_title"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:text="@string/title_email"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/user_email"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_sex_title"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_toEndOf="@id/user_email_title"
                android:layout_toRightOf="@id/user_email_title"
                android:text="@string/text_mera_yahoo_com" />

        </RelativeLayout>
    </ScrollView>
</FrameLayout>
