<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/doctor_root_view"
    android:layout_width="match_parent"
    android:layout_height="65dp"
    android:background="@color/white">

    <ImageView
        android:id="@+id/doctor_picture"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:contentDescription="@string/desc_doctor_profile_picture"
        android:scaleType="fitCenter"
        android:src="@drawable/doctor_placeholder" />

    <View
        android:id="@+id/useless_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerVertical="true" />

    <TextView
        android:id="@+id/doctor_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/useless_view"
        android:layout_toEndOf="@id/doctor_picture"
        android:layout_toRightOf="@id/doctor_picture"
        android:text="@string/doctor_name"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/doctor_speciality"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/useless_view"
        android:layout_toEndOf="@id/doctor_picture"
        android:layout_toRightOf="@id/doctor_picture"
        android:text="@string/doctor_speciality" />

    <Button
        android:id="@+id/doctor_follow_button"
        style="?attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:background="@color/white"
        android:clickable="true"
        android:minHeight="0dp"
        android:minWidth="0dp"
        android:padding="8dp"
        android:text="@string/title_follow"
        android:textColor="@color/colorPrimary" />

</RelativeLayout>