<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/doctor_achievement_item_root_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginTop="8dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/doctor_achievement_item_title"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/post_title"
        android:textColor="@android:color/primary_text_light" />

    <TextView
        android:id="@+id/doctor_achievement_item_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:maxLines="3"
        android:text="@string/post_desc"
        android:textColor="@android:color/secondary_text_light" />

    <ImageView
        android:id="@+id/doctor_achievement_item_image"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_marginBottom="8dp"
        android:adjustViewBounds="true"
        android:clickable="true"
        android:contentDescription="@string/desc_doctor_s_achivements_image"
        android:src="@drawable/doctor_placeholder" />


</LinearLayout>